install (FILES BaseInterface.cpp
               CESUT.cpp
               CMakeLists.txt
               CSocket.cpp
               DMSUT.cpp
               DMSUTtest.cpp
               MEESUT.cpp
               MEESUTtest.cpp
               TxnHarnessSendToMarket.cpp
               TxnHarnessSendToMarketTest.cpp
         DESTINATION "share/dbt5/src/interfaces")
